public/stylesheets/blueprint.css
a, a:visited {
  color: #036;
}
a {
  text-decoration: none;
}
body, input[type=text], textarea {
  color: #333;
  font-family: Helvetica, Verdana, Tahoma, sans-serif;
}
body {
  background-image: url("../images/layout.gif");
  font-size: 12px;
  margin-left: 200px;
  width: 800px;
}
input[type=text], textarea {
  border: 1px solid #aaa;
  font-size: 18px;
  padding: 6px 4px;
}
.sf-menu ul {
  background: #ddd;
  border: 1px solid #ccc;
  border-width: 0 1px 1px 0;
  line-height: 25px;
  position: absolute;
  width: 140px;
}
.notice {
  background: #060;
  color: white;
  line-height: 40px;
  margin: 0;
  padding: 0 20px;
}
.sf-menu a {
  display: block;
  padding: 0 10px;
}
.sf-menu>li:first-child {
  border-width: 0 1px;
}
.sf-menu>li {
  border-color: #aaa;
  border-style: solid;
  border-width: 0 1px 0 0;
  float: left;
  width: 120px;
}
.sf-menu>li>a {
  padding: 9px 10px 7px;
}
.sf-menu ul {
  z-index: 9999;
}
.sf-sub-indicator {
  background-image: url(../images/arrow.gif);
  background-position: right top;
  background-repeat: no-repeat;
  display: block;
  height: 7px;
  overflow: hidden;
  position: absolute;
  top: 13px;
  right: 8px;
  text-indent: -9999px;
  width: 15px;
}
.sf-with-ul {
  position: relative;
}
.sfHover ul a:hover {
  background: #678;
  color: white;
}
#add_links {
  float: right;
}
#add_links li {
  position: relative;
}
#add_links ul {
  right: 0;
}
#container {
  background: #fff;
}
#content {
  padding: 20px;
}
#header {
  background: #ddd;
  font-size: 12px;
}
#header h1 {
  padding: 1.5em 20px 10px;
}
#nav {
  border-bottom: 1px dotted #bbb;
  font-family: Helvetica;
  padding: 0 20px;
}

